--- a/uosc.conf
+++ b/uosc.conf
@@ -24,6 +24,8 @@ timeline_font_scale=1
 # timeline chapters style: none, dots, lines, lines-top, lines-bottom
 chapters=dots
 chapters_opacity=0.3
+# timeline chapters indicator size
+chapters_size=4
 
 # where to display volume controls: none, left, right
 volume=right
