--- a/uosc.conf
+++ b/uosc.conf
@@ -96,6 +96,8 @@ color_background=000000
 color_background_text=ffffff
 # use bold font weight throughout the whole UI
 font_bold=no
+# text border
+text_border_size=2
 # show total time instead of time remaining
 total_time=no
 # hide UI when mpv autohides the cursor
