Add speed_bar_offset option

--- a/uosc.conf
+++ b/uosc.conf
@@ -48,6 +48,7 @@ volume_font_scale=1
 speed=no
 speed_size=46
 speed_size_fullscreen=68
+speed_bar_offset=0
 speed_persistency=
 speed_opacity=1
 speed_step=0.1
