Custom chapter size, prevent overlaps

--- a/uosc.conf
+++ b/uosc.conf
@@ -30,6 +30,7 @@ timeline_font_scale=1
 # timeline chapters style: dots, lines, lines-top, lines-bottom
 timeline_chapters=dots
 timeline_chapters_opacity=0.2
+timeline_chapters_width=1
 # which timeline elements to render, and in what order
 # available: ranges,chapters,progress,cache,time
 timeline_elements=ranges,chapters,progress,cache,time
